--- a/Airbnb_Booking.ipynb
+++ b/Airbnb_Booking.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/JeUP1ZTImUSeWy9ku6rT",
+      "authorship_tag": "ABX9TyP0DHmIP60WtDGJYMAn2S1+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +45,18 @@
         "import folium\n",
         "from folium.plugins import FastMarkerCluster"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dataset Rows & Columns count\n",
+        "airbnb_data.shape"
+      ],
+      "metadata": {
+        "id": "NxvdeJDtKX8f"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
