--- a/Airbnb_Booking.ipynb
+++ b/Airbnb_Booking.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0DHmIP60WtDGJYMAn2S1+",
+      "authorship_tag": "ABX9TyO7p1NIBJV2edBzIchZ3JkG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,12 +27,197 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# **Project Name**    -   **AirBnB Booking Analysis**\n",
+        "\n",
+        "1.   List item\n",
+        "2.   List item"
+      ],
       "metadata": {
-        "id": "tf1ZJ2DsJktB"
-      },
-      "outputs": [],
+        "id": "7t5_4ntZXTgt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **Project Type** - EDA\n",
+        "##### **Contribution** - Team\n",
+        "##### **Team Member 1 -** Vinayak Vijay Marathe\n",
+        "##### **Team Member 2 -** Riya Patel\n",
+        "##### **Team Member 3 -** Muskan Kasere"
+      ],
+      "metadata": {
+        "id": "4VsQyEqmXYl4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Project Summary -**\n",
+        "\n",
+        "> Indented block\n"
+      ],
+      "metadata": {
+        "id": "WiUAa5gHXanX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "AirBnb is a brief identify for **\"Air Bed and Breakfast\"**, is a online hospitality company focused on short time length homestays or rental platform.\n",
+        "\n",
+        "On airbnb, users can book a nearby to stay as accordance to their convinent in more than 34000+ cities at some aspect of 200+ countries. Airbnb used to started in 2008 by Brian Chesky and Joe Gebbia, specifically based in San Francisco California. Airbnb platform is reachable via mobile app and website.\n",
+        "\n",
+        "In our project, there is 16 columns which has hosts, host_name, neighbourhood_group, neighbourhood, room_type etc and 48895 rows which has all the information about airbnb's hosts. This datasets also have some null values which are handled by us. We can also see the overall details of NYC using the map."
+      ],
+      "metadata": {
+        "id": "rDuytw6AXegI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **GitHub Link -**"
+      ],
+      "metadata": {
+        "id": "AJlJHS4dXjsM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Provide your GitHub Link here.\n",
+        "\n",
+        "1.   Vinayak Marathe: https://github.com/v1git12\n",
+        "2.   Riya Patel: https://github.com/riyapatelrp\n",
+        "3.   Muskan Kasere: https://github.com/MuskanKasere"
+      ],
+      "metadata": {
+        "id": "YAwYS4NtXn9Z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Problem Statement**\n"
+      ],
+      "metadata": {
+        "id": "1-otUy1ZXwvV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The objective of the project is to perform an exploratory data analysis, data pre-processing, data cleaning & imputation and at the end, apply different Data Visualization techniques to get the meaningful insight from the given data. This project aims apply some amazing Python Libraries such as Folium and WordCloud which will give a boost to our visual understanding of the data.\n",
+        "\n",
+        "These thousands and lots of records generate a lot of statistics/data and this data can be analyzed, used for security, grasp of customers/providers behavior, buisness preferences & performance on the platform, implementation of modern additional service and for a lots of things. we are analyzing the various aspects with different use cases which covers many aspects of airbnb listings.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "kH1G_ZHOX3vU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Define Your Business Objective?**"
+      ],
+      "metadata": {
+        "id": "lM7MaA3VX6vn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To Analyze the Buisness Trends and Customer's Views/Satisfaction"
+      ],
+      "metadata": {
+        "id": "7Dxt_t3zX-A6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **General Guidelines** : -  "
+      ],
+      "metadata": {
+        "id": "F1o-7u7IYCSS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1.   Well-structured, formatted, and commented code is required. \n",
+        "2.   Exception Handling, Production Grade Code & Deployment Ready Code will be a plus. Those students will be awarded some additional credits. \n",
+        "     \n",
+        "     The additional credits will have advantages over other students during Star Student selection.\n",
+        "       \n",
+        "             [ Note: - Deployment Ready Code is defined as, the whole .ipynb notebook should be executable in one go\n",
+        "                       without a single error logged. ]\n",
+        "\n",
+        "3.   Each and every logic should have proper comments.\n",
+        "4. You may add as many number of charts you want. Make Sure for each and every chart the following format should be answered.\n",
+        "        \n",
+        "\n",
+        "```\n",
+        "# Chart visualization code\n",
+        "```\n",
+        "            \n",
+        "\n",
+        "*   Why did you pick the specific chart?\n",
+        "*   What is/are the insight(s) found from the chart?\n",
+        "* Will the gained insights help creating a positive business impact? \n",
+        "Are there any insights that lead to negative growth? Justify with specific reason.\n",
+        "\n",
+        "5. You have to create at least 20 logical & meaningful charts having important insights.\n",
+        "\n",
+        "\n",
+        "[ Hints : - Do the Vizualization in  a structured way while following \"UBM\" Rule. \n",
+        "\n",
+        "U - Univariate Analysis,\n",
+        "\n",
+        "B - Bivariate Analysis (Numerical - Categorical, Numerical - Numerical, Categorical - Categorical)\n",
+        "\n",
+        "M - Multivariate Analysis\n",
+        " ]\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "2NTCPsOJYF7E"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ***Let's Begin !***"
+      ],
+      "metadata": {
+        "id": "sJIZw1SUYKIi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ***1. Know Your Data***"
+      ],
+      "metadata": {
+        "id": "ZV6F6NdHYO9c"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Import Libraries"
+      ],
+      "metadata": {
+        "id": "dW-DBfITYPt1"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [
         "# Import Libraries\n",
         "import numpy as np\n",
@@ -44,7 +229,65 @@
         "#for new york city map\n",
         "import folium\n",
         "from folium.plugins import FastMarkerCluster"
-      ]
+      ],
+      "metadata": {
+        "id": "h5CQByTZYUze"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Dataset Loading"
+      ],
+      "metadata": {
+        "id": "DaDdK_XEYXEA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load Dataset\n",
+        "url = 'https://drive.google.com/file/d/1ioU5r9KEYSfwgfUi22SclVkx4l1a_8ou/view?usp=sharing'\n",
+        "url = 'https://drive.google.com/uc?id=' + url.split('/')[-2]\n",
+        "airbnb_data = pd.read_csv(url)"
+      ],
+      "metadata": {
+        "id": "2Jf_v6LQYZbU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Dataset First View"
+      ],
+      "metadata": {
+        "id": "6dNDDkIVYbwP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dataset First Look\n",
+        "airbnb_data.head()"
+      ],
+      "metadata": {
+        "id": "kQkic5mqYfpW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Dataset Rows & Columns count"
+      ],
+      "metadata": {
+        "id": "BabK4kSoYjCJ"
+      }
     },
     {
       "cell_type": "code",
@@ -53,10 +296,181 @@
         "airbnb_data.shape"
       ],
       "metadata": {
-        "id": "NxvdeJDtKX8f"
+        "id": "ATwTttXzYmCP"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Dataset Information"
+      ],
+      "metadata": {
+        "id": "kQXEpKcdYo84"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dataset Info\n",
+        "airbnb_data.info()"
+      ],
+      "metadata": {
+        "id": "rLtLqMdYYq1i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Visualizing datasets on a map for easy understanding of individual location of NYC\n",
+        "# Here we pass coordinates of location (latitudes = 40.72 and longitude = -73.95)\n",
+        "locations = list(zip(airbnb_data.latitude, airbnb_data.longitude))\n",
+        "\n",
+        "map1 = folium.Map(width=800,height=400,location=[40.72,-73.95], zoom_start=5)\n",
+        "FastMarkerCluster(data=locations).add_to(map1)\n",
+        "map1"
+      ],
+      "metadata": {
+        "id": "Keyr5HuTYxJ_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Duplicate Values"
+      ],
+      "metadata": {
+        "id": "iTDHg3nyYzWq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dataset Duplicate Value Count\n",
+        "len(airbnb_data[airbnb_data.duplicated()])"
+      ],
+      "metadata": {
+        "id": "ZNlvaGF8Y1uj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Missing Values/Null Values"
+      ],
+      "metadata": {
+        "id": "qPcX2qyKY4Py"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Missing Values/Null Values Count\n",
+        "airbnb_data.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "-nEKt-BrY6gs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Visualizing the missing values\n",
+        "plt.figure(figsize = (10,8))\n",
+        "sns.heatmap(airbnb_data.isnull())\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "tFSDotQ1Y8wm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Droping the data that are not of interest\n",
+        "airbnb_data.drop(['id','last_review'], axis=1, inplace=True)\n",
+        "airbnb_data.head(3)"
+      ],
+      "metadata": {
+        "id": "Gn253AQ0Y_E2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Replacing all NaN values \n",
+        "airbnb_data.fillna({'reviews_per_month':0}, inplace=True)\n",
+        "airbnb_data.fillna({'name':'unknown'}, inplace = True)\n",
+        "airbnb_data.fillna({'host_name':'unknown'}, inplace = True)"
+      ],
+      "metadata": {
+        "id": "7_bO3ktYZB8F"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "airbnb_data.head(3)"
+      ],
+      "metadata": {
+        "id": "nm_wP0rVZCvW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Now our data is cleaned\n",
+        "airbnb_data.info()"
+      ],
+      "metadata": {
+        "id": "o91gD37vZIsl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### What did you know about your dataset?"
+      ],
+      "metadata": {
+        "id": "x8miyDSWZLLC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "These datasets of airbnb has a 48895 unique listing in New York city in total. The New York city Airbnb dataset contains a very well curated list of room postings from the New York city. Although it would be nice to have few more features about the rooms, users, comments, etc. I think a great number of task can be acomplished even with the limited number of entries in the dataset, at least, we all can learn something new about the vacation room rental in New York city."
+      ],
+      "metadata": {
+        "id": "LdIBIiDuZNOz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ***2. Understanding Your Variables***"
+      ],
+      "metadata": {
+        "id": "yoFcJaGHZQAn"
+      }
     }
   ]
 }
