--- a/Airbnb_Booking.ipynb
+++ b/Airbnb_Booking.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO7p1NIBJV2edBzIchZ3JkG",
+      "authorship_tag": "ABX9TyO4zKyuQJ/7c6cB/TLZYrWS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -471,6 +471,152 @@
       "metadata": {
         "id": "yoFcJaGHZQAn"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dataset Columns\n",
+        "airbnb_data.columns"
+      ],
+      "metadata": {
+        "id": "Ns-v4CNhdxYR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Dataset Describe of important column only\n",
+        "airbnb_data[['price','minimum_nights','number_of_reviews','reviews_per_month','calculated_host_listings_count','availability_365']].describe()"
+      ],
+      "metadata": {
+        "id": "2Emc9bPQd0Pe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* From this we can see the mean price is around 152 dollars.\n",
+        "* Average availablity of an airbnb host around a year is 112 days."
+      ],
+      "metadata": {
+        "id": "n-MlYyGMd4Ca"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Variables Description "
+      ],
+      "metadata": {
+        "id": "AC86ERR9d5VM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*  id - unique listing id\n",
+        "*  Name - Represents Accommodations\n",
+        "*  Host id - Unique id for hosts\n",
+        "*  Host Name - Registerd name for hosts\n",
+        "*  Neighbourhood Group - Group of area/Locations\n",
+        "*  Neighbourhood - Area under neighbourhood group\n",
+        "*  Latitude - location of listing\n",
+        "*  Longitude - location of listing\n",
+        "*  Room Type - unique types of each room \n",
+        "*  Price - price of properties in dollar\n",
+        "*  Minimum Nights - minimum nights stay required for single visit\n",
+        "*  Number Of Reviews - total rating \n",
+        "*  Last review - latest review given\n",
+        "*  Reviews Per Months - ratings recieved per month\n",
+        "*  Calculated Host Listings Count - total number of properties registerd under hosts\n",
+        "*  Avaliability_365 - number of days for which host is available in a year for bookings\n"
+      ],
+      "metadata": {
+        "id": "pxYZhtmXd5iU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "9p-S78eOeAp5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Numeric Variable\n",
+        "\n",
+        "    host_id\n",
+        "    latitude                       \n",
+        "    longitude  \n",
+        "    price \n",
+        "    minimum_nights    \n",
+        "    number_of_reviews                \n",
+        "    reviews_per_month               \n",
+        "    calculated_host_listings_count  \n",
+        "    availability_365 \n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ZRcWAhFlea5O"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Catagorical Variable\n",
+        "\n",
+        "    name\n",
+        "    host_name                       \n",
+        "    neighbourhood_group              \n",
+        "    neighbourhood\n",
+        "    room_type    "
+      ],
+      "metadata": {
+        "id": "fILMAifZedsc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Check Unique Values for each variable.\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qzTh02q2ejiH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check Unique Values for each variable.\n",
+        "for unique_value in airbnb_data.columns:\n",
+        "  print(\"Unique values in\",unique_value,\"column is\",airbnb_data[unique_value].nunique(),\".\")"
+      ],
+      "metadata": {
+        "id": "gWHDn_OPenLA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Unique values in neighbourhood_group is:',airbnb_data['neighbourhood_group'].unique())\n",
+        "print('Unique values in room_type is:',airbnb_data['room_type'].unique())"
+      ],
+      "metadata": {
+        "id": "R3gL3E93es7Q"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
