--- a/Personal_Colab.ipynb
+++ b/Personal_Colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMXmXemSUo2Km5TdyNpooXk",
+      "authorship_tag": "ABX9TyO5QYIyvGuI9curn5HoLK4V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,6 +130,24 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. ***Data Wrangling***"
+      ],
+      "metadata": {
+        "id": "6cOlKpbQ53Tq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Data Wrangling Code"
+      ],
+      "metadata": {
+        "id": "HOHqkzZr6GP0"
+      }
     }
   ]
 }
