--- a/Airbnb_Booking.ipynb
+++ b/Airbnb_Booking.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4zKyuQJ/7c6cB/TLZYrWS",
+      "authorship_tag": "ABX9TyMp/n2oZfLEh22eP6Ie7ewL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Project Name**    -   **AirBnB Booking Analysis**\n",
-        "\n",
-        "1.   List item\n",
-        "2.   List item"
+        "# **Project Name**    -   **AirBnB Booking Analysis**\n"
       ],
       "metadata": {
         "id": "7t5_4ntZXTgt"
@@ -617,6 +614,149 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3. ***Data Wrangling***"
+      ],
+      "metadata": {
+        "id": "Si98XUAs6BA9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Data Wrangling Code"
+      ],
+      "metadata": {
+        "id": "Zga_EFfk6EAg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###<B>1. Which room type and locality are mostly in demand in NYC ?"
+      ],
+      "metadata": {
+        "id": "gCMqhIh76UzA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Write your code to make your dataset analysis ready.\n",
+        "# Most demanded room type\n",
+        "airbnb_data['room_type'].value_counts()"
+      ],
+      "metadata": {
+        "id": "u0pcWydX6Ykc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# room type feature's mean price\n",
+        "airbnb_data.groupby('room_type')['price'].mean()"
+      ],
+      "metadata": {
+        "id": "MN1j-Kv_6bMx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Mostly demanded room type is either an entire home with the average price of more than 200 dollar or a private room with the average price of more than 85 dollar. While shared room is cheapest and more avaliable with the average price of 70$ approx. So it is clear that most of the guests prefers Entire home or apartment to stay."
+      ],
+      "metadata": {
+        "id": "zA7YxLXA6dj4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Most demanded locality\n",
+        "airbnb_data['neighbourhood_group'].value_counts()"
+      ],
+      "metadata": {
+        "id": "EfWYdAHt6fi7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###**2. Top 10 Host with most properties/listing on airbnb website.**"
+      ],
+      "metadata": {
+        "id": "el0RIhJg6iFT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Top Most Host With maximum Properties\n",
+        "top10_host_details = airbnb_data['host_id'].value_counts().head(15)\n",
+        "top10_host_details"
+      ],
+      "metadata": {
+        "id": "U7n2fJfh6kAP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# creating dataframe for top most host with max properties\n",
+        "top10_host_df = pd.DataFrame(top10_host_details)\n",
+        "top10_host_df.reset_index(inplace=True)\n",
+        "top10_host_df.rename(columns={'index' : 'Host_id', 'host_id':'no_of_properties'}, inplace=True)\n",
+        "top10_host_df.head(10)"
+      ],
+      "metadata": {
+        "id": "qbwJruF36m__"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#details of toppest host \n",
+        "airbnb_data[airbnb_data['host_id'] == 219517861].head(1)"
+      ],
+      "metadata": {
+        "id": "QAS4rjnu6olj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#details of second toppest host\n",
+        "airbnb_data[airbnb_data['host_id'] == 107434423].head(1)"
+      ],
+      "metadata": {
+        "id": "1pmqYj1z6qBo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "So, Sonder(NYC) has the maximum number of listing on airbnb platform and also leads the most expensive neighbourhood group in New York city followed by Blueground with 232 properties on airbnb."
+      ],
+      "metadata": {
+        "id": "zxqgni6Y6r_X"
+      }
     }
   ]
 }
