--- a/Personal_Colab.ipynb
+++ b/Personal_Colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO5QYIyvGuI9curn5HoLK4V",
+      "authorship_tag": "ABX9TyPU6xAnp7mZTgXde1DM1tW3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,194 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "# **Project Name**    -   **AirBnB Booking Analysis**\n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "9A2gnr0KeOpt"
-      },
-      "outputs": [],
-      "source": []
+        "id": "QvSZjyGSfPWG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **Project Type** - EDA\n",
+        "##### **Contribution** - Team\n",
+        "##### **Team Member 1 -** Vinayak Vijay Marathe\n",
+        "##### **Team Member 2 -** Riya Patel\n",
+        "##### **Team Member 3 -** Muskan Kasere"
+      ],
+      "metadata": {
+        "id": "HSFCGb8FfR-i"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "iduV5JCXgz5P"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Project Summary -**\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "DQprNhWQgnp-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "AirBnb is a brief identify for **\"Air Bed and Breakfast\"**, is a online hospitality company focused on short time length homestays or rental platform.\n",
+        "\n",
+        "On airbnb, users can book a nearby to stay as accordance to their convinent in more than 34000+ cities at some aspect of 200+ countries. Airbnb used to started in 2008 by Brian Chesky and Joe Gebbia, specifically based in San Francisco California. Airbnb platform is reachable via mobile app and website.\n",
+        "\n",
+        "In our project, there is 16 columns which has hosts, host_name, neighbourhood_group, neighbourhood, room_type etc and 48895 rows which has all the information about airbnb's hosts. This datasets also have some null values which are handled by us. We can also see the overall details of NYC using the map.\n"
+      ],
+      "metadata": {
+        "id": "TkyRV9kagqXJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **GitHub Link -**"
+      ],
+      "metadata": {
+        "id": "kFoudBdeg1Tk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Provide your GitHub Link here.\n",
+        "\n",
+        "1.   Vinayak Marathe: https://github.com/v1git12\n",
+        "2.   Riya Patel: https://github.com/riyapatelrp\n",
+        "3.   Muskan Kasere: https://github.com/MuskanKasere\n",
+        "   \n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "4KgqkF7mg3OF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Problem Statement**\n"
+      ],
+      "metadata": {
+        "id": "rpXG_Qffg8AX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The objective of the project is to perform an exploratory data analysis, data pre-processing, data cleaning & imputation and at the end, apply different Data Visualization techniques to get the meaningful insight from the given data. This project aims apply some amazing Python Libraries such as Folium and WordCloud which will give a boost to our visual understanding of the data.\n",
+        "\n",
+        "These thousands and lots of records generate a lot of statistics/data and this data can be analyzed, used for security, grasp of customers/providers behavior, buisness preferences & performance on the platform, implementation of modern additional service and for a lots of things. we are analyzing the various aspects with different use cases which covers many aspects of airbnb listings.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "X4dLSyNxg8wi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Define Your Business Objective?**"
+      ],
+      "metadata": {
+        "id": "ueuL4NMthA1n"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To Analyze the Buisness Trends and Customer's Views/Satisfaction"
+      ],
+      "metadata": {
+        "id": "VgxDls6ChELl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **General Guidelines** : -  "
+      ],
+      "metadata": {
+        "id": "nCsQ0lEvhGOj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1.   Well-structured, formatted, and commented code is required. \n",
+        "2.   Exception Handling, Production Grade Code & Deployment Ready Code will be a plus. Those students will be awarded some additional credits. \n",
+        "     \n",
+        "     The additional credits will have advantages over other students during Star Student selection.\n",
+        "       \n",
+        "             [ Note: - Deployment Ready Code is defined as, the whole .ipynb notebook should be executable in one go\n",
+        "                       without a single error logged. ]\n",
+        "\n",
+        "3.   Each and every logic should have proper comments.\n",
+        "4. You may add as many number of charts you want. Make Sure for each and every chart the following format should be answered.\n",
+        "        \n",
+        "\n",
+        "```\n",
+        "# Chart visualization code\n",
+        "```\n",
+        "            \n",
+        "\n",
+        "*   Why did you pick the specific chart?\n",
+        "*   What is/are the insight(s) found from the chart?\n",
+        "* Will the gained insights help creating a positive business impact? \n",
+        "Are there any insights that lead to negative growth? Justify with specific reason.\n",
+        "\n",
+        "5. You have to create at least 20 logical & meaningful charts having important insights.\n",
+        "\n",
+        "\n",
+        "[ Hints : - Do the Vizualization in  a structured way while following \"UBM\" Rule. \n",
+        "\n",
+        "U - Univariate Analysis,\n",
+        "\n",
+        "B - Bivariate Analysis (Numerical - Categorical, Numerical - Numerical, Categorical - Categorical)\n",
+        "\n",
+        "M - Multivariate Analysis\n",
+        " ]\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "fMDHRnrThIwo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ***Let's Begin !***"
+      ],
+      "metadata": {
+        "id": "-ut-RMdChLyv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "AcMx4lbrgshA"
+      }
     },
     {
       "cell_type": "markdown",
