--- a/Personal_Colab.ipynb
+++ b/Personal_Colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPU6xAnp7mZTgXde1DM1tW3",
+      "authorship_tag": "ABX9TyPaAe6Z2b8fMhHRf/+FSBF+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -208,6 +208,67 @@
       "metadata": {
         "id": "-ut-RMdChLyv"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ***1. Know Your Data***"
+      ],
+      "metadata": {
+        "id": "iKW31F-KhtOf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Import Libraries"
+      ],
+      "metadata": {
+        "id": "UDxsrt5ahv35"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import Libraries\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline\n",
+        "import seaborn as sns\n",
+        "\n",
+        "#for new york city map\n",
+        "import folium\n",
+        "from folium.plugins import FastMarkerCluster"
+      ],
+      "metadata": {
+        "id": "Jt6JBgFJh16g"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Dataset Loading"
+      ],
+      "metadata": {
+        "id": "Va-U85KViBN_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load Dataset\n",
+        "url = 'https://drive.google.com/file/d/1ioU5r9KEYSfwgfUi22SclVkx4l1a_8ou/view?usp=sharing'\n",
+        "url = 'https://drive.google.com/uc?id=' + url.split('/')[-2]\n",
+        "airbnb_data = pd.read_csv(url)"
+      ],
+      "metadata": {
+        "id": "vhF-LlOniEW9"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
